# Sumitomo-F70-Python

./: .buildinfo  .gitignore  LICENSE.md  README.md  genindex.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sumitomo_f70.html
.github/workflows/: static.yml
_sources/: index.rst.txt  sumitomo_f70.rst.txt  usage.rst.txt
docs/source/: conf.py  index.rst  modules.rst  usage.rst
shif70/: __init__.py  shicryo_f70.py
sumitomo_f70/: __init__.py  sumitomo_f70.py
tests/: test_f70.py
