[metadata]
name = sumitomo_f70
version = 1.0.0
author = Jamie Eckstein
description='Unofficial Sumitomo F70 Helium Compressor python driver',
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
project_urls =
    Homepage = https://github.com/xkstein/Sumitomo-F70-Python
    Docs = https://xkstein.github.io/Sumitomo-F70-Python/

[options]
install_requires = 
    requests
    packaging
    pyserial >= 3.5
exclude = 
    tests*
    docs*
